# Q4_2025_Accel_hnariman

./: README.md
week-01-token-extensions-litesvm/: .gitignore
week-01-token-extensions-litesvm/hooks/: Anchor.toml
week-01-token-extensions-litesvm/hooks/programs/admin/: Cargo.toml
week-01-token-extensions-litesvm/hooks/programs/admin/src/: errors.rs  lib.rs
week-01-token-extensions-litesvm/hooks/programs/admin/src/instructions/: init.rs  mod.rs  whitelist_add.rs  whitelist_remove.rs
week-01-token-extensions-litesvm/hooks/programs/admin/src/state/: config.rs  mod.rs  whitelist.rs
week-01-token-extensions-litesvm/hooks/programs/hooks/: Cargo.toml
week-01-token-extensions-litesvm/hooks/programs/hooks/src/: lib.rs
week-01-token-extensions-litesvm/hooks/tests/: Cargo.toml
week-01-token-extensions-litesvm/hooks/tests/src/: lib.rs  test_admin_init.rs  test_initialize.rs
week-01-token-extensions-litesvm/litesvm/: .gitignore
week-01-token-extensions-litesvm/token_extensions/: .gitignore  Anchor.toml  THKLBZ9UvxwdrB3SjqiG8rwmvDTS6MRTe3VTZLZZGQQ.json  TKNLTcf6BBGGGunnxDERCbKoCvvn1JS27CDwuJnR8S7.json  hukP5jc33uQuUuWNKQfFT23hEVnGypKHvWWJwZWqw2e.json  json  logs.txt  tkn8kTw4hftPw5aJkBw5duBggzTKEQw89N31hJBGYtU.json  usrAa4zams9MKpeGQdoUnr6GNpmnZz477qL54LRPSnZ.json
week-01-token-extensions-litesvm/token_extensions/programs/whitelist-transfer-hook/src/: lib.rs
week-01-token-extensions-litesvm/token_extensions/programs/whitelist-transfer-hook/src/state/: whitelist.rs
week-01-token-extensions-litesvm/token_extensions/tests/: whitelist-transfer-hook.ts
(+3 files in other folders)
